# submit50

./: .gitignore  .travis.yml  About.html  C yfyfcig ydigufkv  CS%)  CS50 Project  CS50x  Contact.html  Degrees  Dockerfile  HTML assignment.sln  Hello.c  Home.html  Karunyae  Login.html  MANIFEST.in  Makefile  README  README.md  Register.html  RoamingCat.sb3  Toreses  Users.html  Yousef Khasho  after-install.sh  after-remove.sh  cash new  credit.c  deep.py  defective pong ball.sb3  degrees.py  einstein.py  firstpython.py  food.list  hello  hello.c  hello.py  hello3  home.html  index.html  (+19 more)
.github/workflows/: main.yml
cs50/problems/2019/x/mario/: more
locale/es/: messages.po
locale/es/LC_MESSAGES/: messages.mo  messages.po  submit50.po
src/submit50/: __init__.py  assignment.py  colors.py  git.py  submit.py  utils.py
submit50/: __init__.py  __main__.py  cash.c  mario (1).c  mario.c  submit50.code-workspace
submit50/locale/: submit50.pot
submit50/locale/de/LC_MESSAGES/: submit50.po
submit50/locale/el/LC_MESSAGES/: submit50.po
submit50/locale/es/LC_MESSAGES/: submit50.po
submit50/locale/id/LC_MESSAGES/: submit50.po
submit50/locale/pt/LC_MESSAGES/: submit50.po
tests/: __main__.py  api_tests.py  test_cli.py  test_submit50.py
tests/data/student_cwd/add_delete_modify/.github/workflows/: main.yml
tests/data/submissions/with_dotfiles/.devcontainer/: devcontainer.json
