[metadata]
name = submit50
version = 5.0.3
author = CS50
author_email = sysadmins@cs50.harvard.edu
description = A git wrapper for submitting GitHub Classroom assignments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs50/submit50
project_urls =
    Bug Tracker = https://github.com/cs50/submit50/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts = bin/submit50
install_requires =
    lib50
    termcolor

[options.packages.find]
where = src
